<resources>
    <!-- JSON filename. -->
    <string name="jsonFilename">DigiCalc.json</string>

    <!-- Tab titles -->
    <string name="app_name">DigiCalc</string>
    <string name="tab_text_0">Home</string>
    <string name="tab_text_1">Bin</string>
    <string name="tab_text_2">Octal</string>
    <string name="tab_text_3">Hex</string>
    <string name="convert">Conv.</string>


    <!-- Text in views -->
    <string name="zero64">0/64</string>
    <string name="slash64">/64</string>
    <string name="zero22">0/22</string>
    <string name="slash22">/22</string>
    <string name="zero16">0/16</string>
    <string name="slash16">/16</string>
    <string name="value">Enter The Value You Want To Convert.</string>
    <string name="hex_hint">Enter Hexadecimal Value Here</string>
    <string name="oct_hint">Enter Octal Value Here</string>
    <string name="bin_hint">Enter Binary Value Here</string>
    <string name="bin_answ">Binary</string>
    <string name="oct_answ">Octal</string>
    <string name="hex_answ">Hexadecimal</string>
    <string name="execute">Execute</string>
    <string name="answer">Answer</string>
    <string name="blank"> </string>
    <string name="type">Number Type</string>
    <string name="clear">Clr</string>
    <string name="back">&lt;</string>
    <string name="forward">&gt;</string>
    <string name="field1">Field 1</string>
    <string name="field2">Field 2</string>
    <string name="caps">Caps</string>

    <!-- Operator dropdown -->
    <string-array name="operators">
        <item>Add</item>
        <item>Mult</item>
        <item>Div</item>
    </string-array>

    <!-- Base dropdown -->
    <string-array name="number_base">
        <item>Decimal</item>
        <item>Bin</item>
        <item>Octal</item>
        <item>Hex</item>
    </string-array>

    <!-- Button text -->
    <string name="del">Del</string>
    <string name="minus">\u2014</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>


    <!-- HomeTab content -->
    <string name="home">
        <![CDATA[
        <h2>Quick tips on using DigiCalc</h2>
        <p>
        DigiCalc will calculate 64bit binary, octal and hexadecimal values.
        </p>
        <p>
        The input field are limited to 64bit values. 64bit Octal works out to be 21.333 digits,
        or 3 binary bits per digit, so it was rounded up to 22 digits. 64bit hexadecimal is
        equal 16 digits, which is 4 bits per digit. The output field has no limit because
        of the results of multiplication.
        </p>
        <p>
        Navigate by tapping on the desired tab or swipe in the proper direction (as if you are turning a page).
        </p>
        <p>
        Select your desired operation, \"Add\", \"Mult\", or \"Div\" from the drop down menu.
        </p>
        <p>
        Subtraction is performed in the \"Add\" mode, by placing a negative sign in front of the desired value.
        See directly below.
        </p>
        <p>
        The negative sign key is a toggle. Tapping on it once will place a negative sign on the
        far left end of the value. Tapping on it again will remove it. Regardless of the cursor\'s
        position in the value.
        </p>
        <p>
        To correct a typo, tap on the value at the desired position then if needed use the arrow keys,
        \"&lt;\" or \"&gt;\", to position the cursor to just behind the digit to be changed. Tap \"Del\" key to
        delete <i>that</i> digit. Then tap on the correct digit.
        </p>
        <p>
        The \"CLR\" key will clear all of the fields on the current tab.
        </p>
        <p>
         Testing was performed using two independent sources for solutions, both of which were compared against the calculation algorithm\'s
         output. Even though numerous hours were spent in testing, there is bound to be a pair of values that will produce
         erroneous results. We would be <u>VERY</u> interested in having that pair of values to troubleshoot and test with.
         Please send the pair of values, their numerical base, arithmetic mode, and the results you are getting to:
         <b>woodlandcoders@gmail.com</b>. For quick identification use the subject: \"Bad DigiCalc Results\".
        </p>
        ]]>
    </string>
    <string name="operator_choice">operator choice</string>
    <string name="clear_fields">clear fields</string>
    <string name="back_arrow">back arrow</string>
    <string name="delete_digit">delete digit</string>
    <string name="forward_arrow">forward arrow</string>
    <string name="minus_sign">minus sign</string>
    <string name="caps_lock">caps lock</string>

</resources>
