<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonBackH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/back"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/guideline5H"
        app:layout_constraintStart_toStartOf="@+id/guideline4H"
        app:layout_constraintTop_toBottomOf="@+id/buttonD"
        tools:layout_conversion_absoluteHeight="72dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonForwardH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/forward"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5H"
        app:layout_constraintTop_toBottomOf="@+id/buttonE"
        tools:layout_conversion_absoluteHeight="72dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/a"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline2H"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSixH"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/b"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline3H"
        app:layout_constraintStart_toStartOf="@+id/guideline2H"
        app:layout_constraintTop_toBottomOf="@+id/buttonSevenH"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/c"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline4H"
        app:layout_constraintStart_toStartOf="@+id/guideline3H"
        app:layout_constraintTop_toBottomOf="@+id/buttonNineH"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/d"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline5H"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4H"
        app:layout_constraintTop_toBottomOf="@+id/buttonNineH"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/e"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5H"
        app:layout_constraintTop_toBottomOf="@+id/buttonZeroH"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/f"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline4H"
        app:layout_constraintStart_toStartOf="@+id/guideline3H"
        app:layout_constraintTop_toBottomOf="@+id/buttonC"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonOneH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/one"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline2H"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonTwoH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/two"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline3H"
        app:layout_constraintStart_toStartOf="@+id/guideline2H"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonThreeH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/three"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline4H"
        app:layout_constraintStart_toStartOf="@+id/guideline3H"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonFourH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/four"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline5H"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4H"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonFiveH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/five"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5H"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonSixH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/six"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline2H"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOneH"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonSevenH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/seven"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline3H"
        app:layout_constraintStart_toStartOf="@+id/guideline2H"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwoH"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonEightH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/eight"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline4H"
        app:layout_constraintStart_toStartOf="@+id/guideline3H"
        app:layout_constraintTop_toBottomOf="@+id/buttonThreeH"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonNineH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/nine"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline5H"
        app:layout_constraintStart_toStartOf="@+id/guideline4H"
        app:layout_constraintTop_toBottomOf="@+id/buttonFourH"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonZeroH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/zero"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5H"
        app:layout_constraintTop_toBottomOf="@+id/buttonFiveH"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonDeleteH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/del"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/guideline3H"
        app:layout_constraintStart_toStartOf="@+id/guideline2H"
        app:layout_constraintTop_toBottomOf="@+id/buttonB"
        tools:layout_conversion_absoluteHeight="72dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/buttonMinusH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorDevilRed"
        android:text="@string/minus"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/guideline2H"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonA"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.23"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.405"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.585"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".77"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>